Fix comment visibility

--- a/web/war/src/main/webapp/less/detail/comments.less
+++ b/web/war/src/main/webapp/less/detail/comments.less
@@ -11,25 +11,29 @@
       margin: 1em;
 
       .comment {
-          text-align: left;    
+        text-align: left;    
+      }
+
+      .visibility {
+        display: block;
       }
 
       .comment-text {
-          text-align: left;
+        text-align: left;
       }
 
       .date, .user {
-          font-size: 75%;
-          font-style: italic;
-          color: #555;
-          font-variant: small-caps;
-          text-transform: uppercase;
+        font-size: 75%;
+        font-style: italic;
+        color: #555;
+        font-variant: small-caps;
+        text-transform: uppercase;
       }
       .user {
-          margin-right: 1ex;
-          &:after {
-            content: ','
-          }
+        margin-right: 1ex;
+        &:after {
+          content: ','
+        }
       }
     }
   }
